force-app/main/default/objects/Communication__c/Communication__c.object-meta.xml
<CustomObject>
    <label>Communication</label>
    <nameField>
        <label>Communication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>