force-app/main/default/objects/Communication__c/fields/Customer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_First_Name__c</fullName>
    <formula>if( NOT(ISBLANK( OptyName__c )),&apos;test&apos; , if(NOT(ISBLANK(LeadName__c)), LeadName__r.FirstName,if(NOT(ISBLANK(AccountName__c)),&apos;test&apos;, &apos;No Name&apos;)))</formula>
    <label>Customer First Name</label>
    <type>Text</type>
</CustomField>