force-app/main/default/objects/Communication__c/fields/Customer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Last_Name__c</fullName>
    <formula>if( NOT(ISBLANK( OptyName__c )), &apos;test&apos; , if(NOT(ISBLANK(LeadName__c)), LeadName__r.LastName,if(NOT(ISBLANK(AccountName__c)),&apos;test&apos;, &apos;No Name&apos;)))</formula>
    <label>Customer Last Name</label>
    <type>Text</type>
</CustomField>