force-app/main/default/objects/Communication__c/fields/ExistingChannelPartner__c.field-meta.xml
<CustomField>
    <fullName>ExistingChannelPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Channel Partner</label>
    <referenceTo>Broker__c</referenceTo>
    <relationshipLabel>Communications</relationshipLabel>
    <relationshipName>Communications</relationshipName>
    <type>Lookup</type>
</CustomField>