force-app/main/default/objects/Communication__c/fields/year_of_creation__c.field-meta.xml
<CustomField>
    <fullName>year_of_creation__c</fullName>
    <formula>YEAR(DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>year of creation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>