force-app/main/default/objects/Communication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Task_Type__c</columns>
    <columns>sobjectName__c</columns>
    <columns>Customer_Last_Name__c</columns>
    <columns>Customer_Mobile_Phone__c</columns>
    <columns>Sales_Manager_Name__c</columns>
    <columns>Sales_Manager_Mobile__c</columns>
    <columns>LeadName__c</columns>
    <columns>OptyName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>